testdata/golden/sema/valid/ret_nothing_block_expr.sg
fn main(flag: bool) -> nothing {
    let x = {
        if flag {
            ret;
        }
        ret nothing;
    };
    x;
    return nothing;
}
