testdata/golden/sema/invalid/default_uninit_ref.sg
fn main() -> int {
    let r: &int;
    return 0;
}
